Texto en index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem <b> ipsum dolor sit amet consectetur</b> adipisicing elit. Doloremque labore voluptate odit id aperiam cum neque sint minima, autem commodi ad. Molestias qui numquam possimus voluptates officiis fugit quibusdam nulla.</p>
+    <p>Hola desde html</p>
     
 </body>
 </html>
